<resources>
    <string name="app_name">Location Banana</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="empty">empty</string>

    <string name="update_map">Update Map</string>
    <string name="share">Sharing</string>
    <string name="share_via">Share via</string>

    <!-- Address -->
    <string name="address">Add : %1$s</string>

    <!-- Coordinate : DD -->
    <string name="coordinate_latitude_init">Lat : -.----</string>
    <string name="coordinate_longitude_init">Lon : -.----</string>
    <string name="coordinate_latitude">Lat :  %1$.6f</string>
    <string name="coordinate_longitude">Lon : %1$.6f</string>

    <!-- Coordinate : DMS -->
    <string name="coordinate_latitude_dms">(DMS)  %1$s</string>
    <string name="coordinate_longitude_dms">(DMS) %1$s</string>

    <!-- Current Location -->
    <string name="current_location">Current location</string>

    <!-- Shortener -->
    <string name="shortener">Shortener</string>

    <!-- Network Status -->
    <string name="network_disconnected">Network disconnected.</string>
    <!-- Refresh -->
    <string name="refresh">Refresh</string>

    <!-- GpsStatus.Listener Event -->
    <string name="gps_status_started">Started</string>
    <string name="gps_status_stopped">Stopped</string>
    <string name="gps_status_first_fix">First Fix</string>
    <string name="gps_status_satellite">Satellite</string>
</resources>
