<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/banana_yellow">

    <!-- Coordinate -->
    <LinearLayout
        android:layout_width="@dimen/coordinate_layout_width"
        android:layout_height="@dimen/coordinate_layout_height"
        android:layout_marginTop="@dimen/coordinate_layout_margin_top"
        android:layout_marginLeft="@dimen/coordinate_layout_margin_left"
        android:layout_marginRight="@dimen/coordinate_layout_margin_right"
        android:background="@color/banana_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_coordinate_latitude"
            android:layout_width="@dimen/coordinate_tv_width"
            android:layout_height="@dimen/coordinate_tv_height"
            android:gravity="center_vertical"
            android:textColor="@color/banana_black"
            android:text="@string/coordinate_latitude_init"/>

        <TextView
            android:id="@+id/tv_coordinate_latitude_dms"
            android:layout_width="@dimen/coordinate_tv_width"
            android:layout_height="@dimen/coordinate_tv_height"
            android:gravity="center_vertical"
            android:textColor="@color/banana_black"
            android:singleLine="true"
            android:text="@string/coordinate_latitude_init"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/coordinate_layout_width"
        android:layout_height="@dimen/coordinate_layout_height"
        android:layout_marginLeft="@dimen/coordinate_layout_margin_left"
        android:layout_marginRight="@dimen/coordinate_layout_margin_right"
        android:layout_marginBottom="@dimen/coordinate_layout_margin_bottom"
        android:background="@color/banana_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_coordinate_longitude"
            android:layout_width="@dimen/coordinate_tv_width"
            android:layout_height="@dimen/coordinate_tv_height"
            android:gravity="center_vertical"
            android:textColor="@color/banana_black"
            android:text="@string/coordinate_longitude_init"/>

        <TextView
            android:id="@+id/tv_coordinate_longitude_dms"
            android:layout_width="@dimen/coordinate_tv_width"
            android:layout_height="@dimen/coordinate_tv_height"
            android:gravity="center_vertical"
            android:textColor="@color/banana_black"
            android:singleLine="true"
            android:text="@string/coordinate_longitude_init"/>

    </LinearLayout>
    <!-- Coordinate -->

    <!-- Google Map -->
    <LinearLayout
        android:layout_width="@dimen/map_layout_width"
        android:layout_height="@dimen/map_layout_height"
        android:layout_marginLeft="@dimen/map_layout_margin_left"
        android:layout_marginRight="@dimen/map_layout_margin_right">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="@dimen/map_fragment_width"
            android:layout_height="@dimen/map_fragment_height"/>

    </LinearLayout>
    <!-- Google Map -->

    <LinearLayout
        android:layout_width="@dimen/control_layout_width"
        android:layout_height="@dimen/control_layout_height"
        android:layout_margin="@dimen/control_layout_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_share"
            android:layout_width="@dimen/share_btn_width"
            android:layout_height="@dimen/share_btn_height"
            android:text="@string/share"
            android:background="@drawable/banana_button_ellipse"/>

        <LinearLayout
            android:layout_width="@dimen/control_gab_width"
            android:layout_height="@dimen/control_gab_height"
            android:background="@color/banana_yellow"/>
        
        <ImageView
            android:id="@+id/iv_compass_needle"
            android:layout_width="@dimen/compass_img_width"
            android:layout_height="@dimen/compass_img_height"
            android:background="@mipmap/compass_needle"/>

        <LinearLayout
            android:layout_width="@dimen/control_gab_width"
            android:layout_height="@dimen/control_gab_height"
            android:background="@color/banana_yellow"/>

        <Button
            android:id="@+id/btn_position"
            android:layout_width="@dimen/share_btn_width"
            android:layout_height="@dimen/share_btn_height"
            android:text="@string/update_map"
            android:background="@drawable/banana_button_ellipse"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/control_layout_width"
        android:layout_height="@dimen/control_layout_height"
        android:layout_margin="@dimen/control_layout_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_shortener"
            android:layout_width="@dimen/control_btn_width"
            android:layout_height="@dimen/control_btn_height"
            android:text="@string/shortener"
            android:background="@drawable/banana_button_ellipse"/>

        <LinearLayout
            android:layout_width="@dimen/control_gab_width"
            android:layout_height="@dimen/control_gab_height"
            android:background="@color/banana_yellow"/>

        <TextView
            android:id="@+id/tv_shortener"
            android:layout_width="@dimen/control_btn_width"
            android:layout_height="@dimen/control_btn_height"
            android:text="@string/empty"
            android:background="@color/banana_white"/>

    </LinearLayout>

</LinearLayout>